--- a/1.InstalaciónPython/PythonVersion.ipynb
+++ b/1.InstalaciónPython/PythonVersion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxHE6AmOC1dJfi2A85+kMO",
+      "authorship_tag": "ABX9TyNi80uTZ+EZqNOQh6/COr5Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,8 @@
       "source": [
         "\n",
         "\n",
-        "# Intalar Versión Python 3.12 Python en Google Colab\n",
+        "<h1> <center> Intalar Versión Python 3.12 Python en Google Colab </center></h1>\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -46,15 +47,6 @@
       "metadata": {
         "id": "2rY6qttiB_NP"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "DJQFwpXbC0C9"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
