--- a/2.ElementosMatemáticosBásicos/RaizRealPositivaMetodoBabilonico.ipynb
+++ b/2.ElementosMatemáticosBásicos/RaizRealPositivaMetodoBabilonico.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCAImOWDZSsM3rrPBC+NCS",
+      "authorship_tag": "ABX9TyNqsRdyPu1P1BxU+lDW2bSr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "import numpy as np\n",
         "\n",
         "raiz = float(input(\"Dame el valor del cual quieres la raíz: \"))\n",
-        "aprox = float(input(\"Da una paroximación: \"))\n",
+        "aprox = float(input(\"Da una aproximación: \"))\n",
         "\n",
         "\n",
         "for x in range(5):\n",
@@ -58,10 +58,25 @@
         "print(\"La raíz de {0} es {1:50.49} \".format(raiz, np.sqrt(raiz)))"
       ],
       "metadata": {
-        "id": "CC3CGXhtDZ6Y"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CC3CGXhtDZ6Y",
+        "outputId": "24cb09cd-995b-42d6-e420-ca5c454b85ea"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame el valor del cual quieres la raíz: 5\n",
+            "Da una paroximación: 2\n",
+            "La raíz aproximada de 5.0 es 2.23606797749979\n",
+            "La raíz de 5.0 es 2.236067977499789805051477742381393909454345703125 \n"
+          ]
+        }
+      ]
     }
   ]
 }
