--- a/2.ElementosMatemáticosBásicos/Conjuntos/Ejer_Conjuntos_ExamenMateIV.ipynb
+++ b/2.ElementosMatemáticosBásicos/Conjuntos/Ejer_Conjuntos_ExamenMateIV.ipynb
@@ -17,7 +17,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ejercico de Conjutos para Matemáticas IV"
+        "# Problema Examen de Matemáticas IV\n",
+        "# Concurso Interpreparatoriano 2010  ENP 2\n",
+        "\n",
+        "Tema: Conuntos\n",
+        "### Obten\n",
+        "\\begin{equation}\n",
+        "(E^c)^c ∩ (A - G)^c\n",
+        "\\end{equation}\n",
+        "\n",
+        "\n",
+        "---\n",
+        "editor: Roberto Méndez Méndez\n",
+        "\n",
+        "modificado: 21 Jun 24"
       ],
       "metadata": {
         "id": "iXnj6x1cC7mH"
@@ -26,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Uso de range"
+        "### Uso de range"
       ],
       "metadata": {
         "id": "cN1MV4nm4ZGL"
@@ -43,9 +56,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VcFvD88ljvIO",
-        "outputId": "5408668e-336e-4ea8-9365-5cfef40ff6d9"
+        "outputId": "8bb81809-5cfc-49c7-f845-c6060eabfdb8"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,9 +93,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YPJCUuWrkJq6",
-        "outputId": "89326049-e0a8-4790-8d77-5c932ca1f2a7"
+        "outputId": "e775c872-b090-4192-e2dc-f7a632a385ad"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +110,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Conjunto universal naturales del 1 al 20"
+        "### Conjunto universal naturales del 1 al 20"
       ],
       "metadata": {
         "id": "Y9UWlEo_I9Sn"
@@ -105,13 +118,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6lB3Z7j8Cczr",
-        "outputId": "8dbeeda4-5458-43b0-c5df-0b6b3c62fc6c"
+        "outputId": "fd00b683-09c5-4f7c-b4ae-fb55c1f192ce"
       },
       "outputs": [
         {
@@ -134,7 +147,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Conjunto A de numeros x tal que x par ; x < 10"
+        "\n",
+        "## Conjunto A de numeros x tal que x par ; x < 10"
       ],
       "metadata": {
         "id": "Nl2ARCp3HpNY"
@@ -151,9 +165,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p8UxIFjqDBB_",
-        "outputId": "9179d293-eac2-4942-9832-2a8ab2ca3c29"
+        "outputId": "b3cdf62c-6344-4f52-8d33-0435eb76ec3b"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +181,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Actividad obten los número impares"
+        "## Actividad obten los número impares"
       ],
       "metadata": {
         "id": "P-Jh0iH_liZC"
@@ -176,7 +190,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Conjunto E de números x tal que x tiene un solo dígito"
+        "### Conjunto E de números x tal que x tiene un solo dígito\n"
       ],
       "metadata": {
         "id": "ZthkEvCjJREK"
@@ -193,9 +207,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "748ad04d-0762-4f33-f16e-aeca683d4270"
+        "outputId": "66a83f23-29df-4716-c5af-4b7abe4843e7"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,9 +240,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g-n4LaDsJ2zh",
-        "outputId": "37f27fbd-bb53-4379-e1d5-23d3ec281422"
+        "outputId": "fe0e7867-1056-4721-b68f-d1f1e9299aa2"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +256,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Obten\n",
+        "## Obten\n",
         "\\begin{equation}\n",
         "(E^c)^c ∩ (A - G)^c\n",
         "\\end{equation}"
@@ -269,9 +283,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o94Y_JmgKr54",
-        "outputId": "63363ae2-bba9-4d5d-994e-ee1dd7c82c31"
+        "outputId": "cb95c2e7-708e-463e-cd35-e6b0999cc599"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +294,7 @@
             "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
             "{8, 2}\n",
             "{1, 3, 4, 5, 6, 7, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20}\n",
-            "{1, 3, 4, 5, 6, 7, 9}\n"
+            "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n"
           ]
         }
       ]
