--- a/4.FuncionesLímitesDerivadaIntegración/Limites_Derivada_Integrales/Límite_Derivada_Integral_Sympy_Básico_cA.ipynb
+++ b/4.FuncionesLímitesDerivadaIntegración/Limites_Derivada_Integrales/Límite_Derivada_Integral_Sympy_Básico_cA.ipynb
@@ -30,7 +30,7 @@
         "---\n",
         "autor: Roberto Méndez\n",
         "\n",
-        "Editado: 27 Jun 24\n"
+        "Editado: 30 Jun 24\n"
       ],
       "metadata": {
         "id": "KrAwpZovSB-9"
@@ -103,7 +103,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from sympy import symbols, diff, sin, exp\n",
+        "from sympy import symbols, diff, sin\n",
         "x  = symbols('x')\n",
         "dx = diff(sin(x)/x, x)\n",
         "print(\"La derivada es: \", dx)\n",
@@ -132,7 +132,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from sympy import symbols, diff, sin, exp, ln\n",
+        "from sympy import symbols, diff, exp, ln\n",
         "\n",
         "x  = symbols('x')\n",
         "fx = ln(4**(7*x**2)/(5*exp(3*x**5)))\n",
@@ -148,26 +148,10 @@
         "print(\"La derivada evaluada en x = {0} es: {1}\".format(puntoEvaluacion, dxEval))"
       ],
       "metadata": {
-        "id": "Z869mIS5bRHJ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "22f07a63-3d57-4dbb-f16c-5b00e8e17ade"
+        "id": "Z869mIS5bRHJ"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "La derivada es: \n",
-            " 5*(-3*4**(7*x**2)*x**4*exp(-3*x**5) + 14*4**(7*x**2)*x*exp(-3*x**5)*log(4)/5)*exp(3*x**5)/4**(7*x**2)  \n",
-            "= -15*x**4 + 28*x*log(2) \n",
-            "La derivada evaluada en x = 0 es: 0\n",
-            "La derivada evaluada en x = 1.08967 es: 0.000353052723166182\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -188,7 +172,7 @@
       "cell_type": "code",
       "source": [
         "from IPython.display import display, Latex\n",
-        "from sympy import symbols, diff, sin, exp, ln, latex, Derivative, init_printing\n",
+        "from sympy import symbols, exp, ln, latex, Derivative, init_printing\n",
         "init_printing(use_latex='mathjax')\n",
         "\n",
         "x  = symbols('x')\n",
@@ -210,9 +194,9 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 128
+          "height": 148
         },
-        "outputId": "a8910899-a9af-4a74-e396-99767ccde54e",
+        "outputId": "a8b7fd99-915f-4dca-90c8-b0c52cc7969d",
         "id": "j4De_Li4xoM5"
       },
       "execution_count": null,
@@ -284,7 +268,7 @@
         "from sympy import symbols, Integral, sin\n",
         "\n",
         "x  = symbols('x')\n",
-        "intsen =Integral(sin(x), (x,-1,1))\n",
+        "intsen = Integral(sin(x), (x,-1,1))\n",
         "print(\"El resultado es: \", intsen.evalf())"
       ],
       "metadata": {
